# pharmacy-model

./: Animation.cpp  Animation.h  CMakeLists.txt  back.cpp  back.h  ill.cpp  main.cpp  mainwindow.cpp  mainwindow.h  medicament.cpp  medicament.h  modeling.cpp  modeling.h  notification.cpp  notification.h  notification_list.cpp  notification_list.h  person.cpp  person.h  tablet.h
